--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -147,7 +147,7 @@
         if (!string.IsNullOrWhiteSpace(newUsername) && CurrentUser is not null)
         {
             CurrentUser.Avatar.Username = newUsername;
-            await SparcEngine.UpdateUser(new UpdateUserRequest { Username = CurrentUser.Avatar.Username });
+            // await SparcEngine.UpdateUser(new UpdateUserRequest { Username = CurrentUser.Avatar.Username });
         }
 
         await Js.InvokeVoidAsync("setEditingUsername", false);
