--- a/Sparc2/Sparc2/Profile/UserProfile.razor
+++ b/Sparc2/Sparc2/Profile/UserProfile.razor
@@ -1,4 +1,4 @@
-﻿@using Sparc.Blossom.Authentication
+﻿@* @using Sparc.Blossom.Authentication
 
 <div class="user-profile-container" @onmouseover="() => IsHovered = true" @onmouseout="() => IsHovered = false">
     <div class="profile-picture-wrapper @(IsOnline ? "online" : "")">
@@ -98,8 +98,8 @@
     private async Task GetUserInfo()
     {
         CurrentUser = await SparcEngine.UserInfo();
-        Email = CurrentUser?.Email ?? "";
-        PhoneNumber = CurrentUser?.PhoneNumber ?? "";
+        // Email = CurrentUser?.Email ?? "";
+        // PhoneNumber = CurrentUser?.PhoneNumber ?? "";
     }
 
     private async Task OnShowModal(string type)
@@ -206,7 +206,7 @@
             CurrentUser.Avatar.Gender = EditableAvatar.Gender;
         }
 
-        StateHasChanged();
+        // StateHasChanged();
 
         // await GetUserInfo();
     }
@@ -245,3 +245,4 @@
     }
 }
 
+ *@
