Change user resolution strategy to DI
- Updated `BlossomAuthenticator.razor` to inject `ClaimsPrincipal` directly and streamline token login logic.
- Simplified authorization in `BlossomApp.razor` by removing cascading values.
- Enhanced dependency injection for `BlossomUser` in `BlossomBrowserApplicationBuilder.cs` and `BlossomServerApplicationBuilder.cs`.
- Removed cascading parameter for `CurrentUser` in `TovikReferral.razor`.
- Changed heading text in `Index.razor` to reflect new branding.
- Updated `NavMenu.razor` to use injected `User` object and improve user profile display.
- Registered `BlossomUser` and configured passwordless SDK in `ServiceCollectionExtensions.cs`.

--- a/Sparc2/Sparc2/Catalog/TovikReferral.razor
+++ b/Sparc2/Sparc2/Catalog/TovikReferral.razor
@@ -201,9 +201,8 @@
     </div>
 }
 
-
+@inject ClaimsPrincipal CurrentUser
 @code {
-    [CascadingParameter] public required ClaimsPrincipal CurrentUser { get; set; }
     private bool IsCheckingUser = true;
     private bool IsAddingProduct = false;
     string? Message;
