--- a/Sparc2/Sparc2/Index.razor
+++ b/Sparc2/Sparc2/Index.razor
@@ -6,7 +6,7 @@
     <div class="hero">
         <div id="hero-text">
             <h1>
-                Striving for a world where startups are owned by those who built it 
+                Helpful tech, made cooperatively. 
                 <button id="enter-btn">
                     <ArrowRightIcon />
                     <ArrowDownIcon />
