Fixed Stripe form refresh and submit (working with multicurrency and multiprice)

--- a/Sparc2/Sparc2/Catalog/ProductPurchase.razor
+++ b/Sparc2/Sparc2/Catalog/ProductPurchase.razor
@@ -2,7 +2,7 @@
 @using Sparc.Blossom.Billing
 @using System.Globalization
 <div class="product-purchase">
-    <form @onsubmit="SubmitUserBilling" @onsubmit:preventDefault="true">
+    <form id="payment-form" @onsubmit="SubmitUserBilling" @onsubmit:preventDefault="true">
         <section class="license-section">
             <h5>Select License</h5>
                 <div class="form-container">
@@ -78,39 +78,36 @@
         <section class="summary-section">
 
         </section>
-        <button type="submit" class="btn btn-primary">
+        <button id="submit-button" type="submit" class="btn btn-primary">
             Purchase
         </button>
     </form>
 </div>
-
+@inject IJSRuntime JS
 @code {
     [Parameter] public Product? ActiveProduct { get; set; }
 
     private GetProductResponse? StripeProduct;
     BlossomUser? CurrentUser;
     CreateOrderRequest Order = new CreateOrderRequest();
-    
-    
+
+
     protected override async Task OnInitializedAsync()
     {
         CurrentUser = await SparcEngine.UserInfo();
-
         StripeProduct = await SparcEngine.GetProductAsync("prod_SW5yY8O8KprzFu");
-        
-        
-        var test = ActiveProduct;
-
-        var bpoint = "";
     }
 
-    public Task<string> SubmitUserBilling()
+    public async void SubmitUserBilling()
     {
-        if (CurrentUser == null)
-        {
-            throw new InvalidOperationException("User is not authenticated.");
-        }
-
-        return Task.FromResult("Billing information submitted successfully.");
+        var result = await JS.InvokeAsync<PaymentResult>(
+            "stripeIntegration.confirmPayment"
+        );
+    }
+    public class PaymentResult
+    {
+        public bool Succeeded { get; set; }
+        public string? Message { get; set; }
+        public string? Status { get; set; }
     }
 }
