--- a/Sparc2/Sparc2/Catalog/ProductPurchasePayment.razor.scss
+++ b/Sparc2/Sparc2/Catalog/ProductPurchasePayment.razor.scss
@@ -39,7 +39,7 @@
 
             &.selected {
                 background-color: white;
-                border-color: red;
+                border-color: darkblue;
             }
         }
     }
