Fixed predefined amount to be selected on initialization

--- a/Sparc2/Sparc2/Catalog/ProductPurchasePayment.razor
+++ b/Sparc2/Sparc2/Catalog/ProductPurchasePayment.razor
@@ -157,6 +157,7 @@
         ConvertedPrices.OrderBy(c => c);
 
         Order.Amount = (long)ConvertedPrices.FirstOrDefault();
+        _selectedPredefinedAmount = Order.Amount;
 
         StateHasChanged();
     }
