--- a/Sparc2/Sparc2/Catalog/ProductPurchase.razor.scss
+++ b/Sparc2/Sparc2/Catalog/ProductPurchase.razor.scss
@@ -91,4 +91,9 @@
             }
         }
     }
+
+    @media only screen and (max-width: 766px) {
+        padding: 0;
+        padding-bottom: 32px;
+    }
 }
