--- a/Sparc2/Sparc2/Shared/CatalogLayout.razor.scss
+++ b/Sparc2/Sparc2/Shared/CatalogLayout.razor.scss
@@ -23,6 +23,7 @@ main {
         height: calc(100vh - 64px);
         margin-top: 64px;
         padding: 0;
+        overflow-y: hidden;
 
         .grid {
             width: 100%;
