--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -57,7 +57,7 @@
                     </div>
                 </div>
             </div>
-            <div id="menu-toggle" class="menu-toggle">
+            <div id="menu-toggle" class="menu-toggle mobile-only">
                 <button id="menu-btn" class="@(showMobileMenu ? "close" : "")" @onclick=ToggleMobileMenu>
                     <MenuMorphIcon />
                 </button>
