--- a/Sparc2/Sparc2/Catalog/ProductInfo.razor.css
+++ b/Sparc2/Sparc2/Catalog/ProductInfo.razor.css
@@ -1,12 +1,14 @@
 ﻿.product-info {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
   width: calc(100% - 32px);
   position: relative;
 }
 .product-info.product-page {
   padding-bottom: 150px;
+}
+.product-info .info-container {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
 }
 .product-info header {
   display: flex;
@@ -26,6 +28,7 @@
   font-weight: 700;
   line-height: 110%; /* 55.572px */
   color: var(--purple-700);
+  cursor: pointer;
 }
 .product-info header .price {
   width: fit-content;
@@ -77,11 +80,11 @@
   line-height: 140%; /* 22.4px */
   color: var(--Color-Purple-900, #1A0C32);
 }
-.product-info footer .credits {
+.product-info .credits {
   display: flex;
   flex-direction: column;
 }
-.product-info footer .credits h3, .product-info footer .credits p, .product-info footer .credits span, .product-info footer .credits button {
+.product-info .credits h3, .product-info .credits p, .product-info .credits span, .product-info .credits button {
   font-family: "Fjalla One";
   font-size: 1.6rem;
   font-style: normal;
@@ -89,13 +92,13 @@
   line-height: 140%; /* 22.4px */
   color: var(--purple-800);
 }
-.product-info footer .credits h3 {
+.product-info .credits h3 {
   display: flex;
   flex-direction: row;
   justify-content: start;
   align-items: center;
 }
-.product-info footer .credits button {
+.product-info .credits button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -103,50 +106,190 @@
   background: none;
   transition: 0.2s ease-in-out;
 }
-.product-info footer .credits button:hover {
+.product-info .credits button:hover {
   color: var(--purple-500);
 }
-.product-info footer .credits button:active {
+.product-info .credits button:active {
   color: var(--purple-800);
 }
-.product-info footer .credits button span {
+.product-info .credits button span {
   display: inline-block;
   vertical-align: middle;
 }
-.product-info footer .credits button span.rotate {
+.product-info .credits button span.rotate {
   color: var(--purple-500);
   animation: rotateClockwise 1.5s ease-in-out;
 }
-.product-info footer .credits button span.rotateBack {
+.product-info .credits button span.rotateBack {
   animation: rotateCounterClockwise 1.5s ease-in-out;
 }
-.product-info footer .credits div:last-child {
+.product-info .credits div:last-child {
   height: 0;
   opacity: 0;
 }
-.product-info footer .credits div:last-child > * {
+.product-info .credits div:last-child > * {
   height: 0;
 }
-.product-info footer .credits div:last-child.rotate {
+.product-info .credits div:last-child.rotate {
   margin-top: 16px;
   height: fit-content;
   opacity: 1;
   animation: fadeIn 1.5s ease-in;
 }
-.product-info footer .credits div:last-child.rotate > * {
+.product-info .credits div:last-child.rotate > * {
   height: fit-content;
 }
-.product-info footer .credits div:last-child.rotateBack {
+.product-info .credits div:last-child.rotateBack {
   margin: 0;
   opacity: 0;
 }
-.product-info footer .credits div:last-child.rotateBack > * {
+.product-info .credits div:last-child.rotateBack > * {
   height: 0;
 }
 @media only screen and (max-width: 766px) {
-  .product-info {
-    width: calc(100% - 64px);
+  .product-info.catalog-page {
+    width: calc(100% - 48px);
+    height: calc(40vh - 64px);
     padding: 32px;
+    padding-right: 0;
+    overflow: hidden;
+  }
+  .product-info.catalog-page .view-btn {
+    display: block;
+    background: none;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    font-family: "Fjalla One";
+    font-size: 1.4rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 110%; /* 55.572px */
+    color: var(--purple-700);
+    transition: 0.2s ease-in-out;
+  }
+  .product-info.catalog-page .view-btn ::deep svg {
+    width: 24px;
+    height: auto;
+    transform: rotate(180deg);
+  }
+  .product-info.catalog-page .view-btn ::deep svg path {
+    stroke: var(--purple-700);
+  }
+  .product-info.catalog-page .view-btn:hover {
+    color: var(--purple-500);
+  }
+  .product-info.catalog-page .view-btn:hover ::deep svg path {
+    stroke: var(--purple-500);
+  }
+  .product-info.catalog-page .view-btn:active {
+    color: var(--purple-700);
+  }
+  .product-info.catalog-page .view-btn:active ::deep svg path {
+    stroke: var(--purple-500);
+  }
+  .product-info .gradient-overlay {
+    display: block;
+    width: 100%;
+    height: 50%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient(to top, var(--yellow-50), transparent);
+  }
+  .product-info.product-page {
+    overflow: hidden;
+    width: 100%;
+    height: 40vh;
+    padding-bottom: 16px;
+  }
+  .product-info.product-page footer {
+    display: none;
+  }
+  .product-info.product-page.fullscreen {
+    height: calc(100% - 136px);
+  }
+  .product-info.product-page.fullscreen .info-container {
+    height: 100%;
+  }
+  .product-info.product-page.fullscreen .gradient-overlay {
+    display: none;
+  }
+  .product-info.product-page.fullscreen .more-btn {
+    display: none;
+  }
+  .product-info.product-page.fullscreen footer {
+    display: block;
+  }
+  .product-info.product-page.fullscreen footer ::deep .product-actions {
+    position: static;
+    margin-top: 16px;
+  }
+  .product-info.product-page.fullscreen footer ::deep .product-actions .tabs {
+    flex-direction: column;
+  }
+  .product-info.product-page.fullscreen footer ::deep .product-actions .tabs button {
+    width: 85%;
+    height: 64px;
+    padding: 8px 16px;
+    align-items: center;
+    font-size: 2.4rem;
+    font-weight: 400;
+  }
+  .product-info.product-page.fullscreen footer ::deep .product-actions .tabs button:nth-child(1) {
+    transform: rotate(0deg);
+  }
+  .product-info.product-page.fullscreen footer ::deep .product-actions .tabs button:nth-child(1).hovered {
+    transform: translateY(-8px) rotate(0deg);
+    animation: popUp1 0.2s ease-in-out;
+  }
+  .product-info.product-page.fullscreen footer ::deep .product-actions .tabs button:nth-child(1).clicked {
+    transform: translateY(-8px) rotate(0deg);
+  }
+  .product-info.product-page.fullscreen footer ::deep .product-actions .tabs button:nth-child(2) {
+    transform: rotate(-3deg);
+  }
+  .product-info.product-page.fullscreen footer ::deep .product-actions .tabs button:nth-child(2).hovered {
+    transform: translateY(-8px) rotate(-3deg);
+    animation: popUp2 0.2s ease-in-out;
+  }
+  .product-info.product-page.fullscreen footer ::deep .product-actions .tabs button:nth-child(2).clicked {
+    transform: translateY(-8px) rotate(-3deg);
+  }
+  .product-info.product-page.fullscreen footer ::deep .product-actions .tabs button:nth-child(3) {
+    transform: rotate(1deg);
+  }
+  .product-info.product-page.fullscreen footer ::deep .product-actions .tabs button:nth-child(3).hovered {
+    transform: translateY(-8px) rotate(1deg);
+    animation: popUp3 0.2s ease-in-out;
+  }
+  .product-info.product-page.fullscreen footer ::deep .product-actions .tabs button:nth-child(3).clicked {
+    transform: translateY(-8px) rotate(1deg);
+  }
+  .product-info.product-page .more-btn {
+    display: block;
+    padding: 6px 10px;
+    background: none;
+    border: 1px solid transparent;
+    border-radius: 16px;
+    position: absolute;
+    bottom: 16px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-family: "Fjalla One";
+    font-size: 1.4rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 110%; /* 55.572px */
+    color: var(--purple-700);
+    transition: 0.2s ease-in-out;
+  }
+  .product-info.product-page .more-btn:hover {
+    color: var(--purple-500);
+  }
+  .product-info.product-page .more-btn:active {
+    color: var(--purple-700);
+    border-color: var(--purple-700);
   }
   .product-info header h2 {
     font-size: 2.848rem;
@@ -193,5 +336,29 @@
   100% {
     transform: rotate(0deg);
     color: var(--purple-800);
+  }
+}
+@keyframes popUp1 {
+  0% {
+    transform: translateY(0) rotate(deg0);
+  }
+  100% {
+    transform: translateY(-8px) rotate(deg0);
+  }
+}
+@keyframes popUp2 {
+  0% {
+    transform: translateY(0) rotate(-3deg);
+  }
+  100% {
+    transform: translateY(-8px) rotate(-3deg);
+  }
+}
+@keyframes popUp3 {
+  0% {
+    transform: translateY(0) rotate(1deg);
+  }
+  100% {
+    transform: translateY(-8px) rotate(1deg);
   }
 }
