--- a/Sparc2/Sparc2/Catalog/ProductPage.razor.scss
+++ b/Sparc2/Sparc2/Catalog/ProductPage.razor.scss
@@ -1,4 +1,4 @@
-article {
+.product-page {
     grid-column: 1 / span 12;
 
     .page-container {
@@ -12,12 +12,15 @@ article {
     }
 
     .left {
-        display: flex;
-        flex-direction: column;
-        justify-content: start;
-        align-items: center;
-        gap: 16px;
         padding-bottom: 32px;
+
+        &-container {
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+            align-items: center;
+            gap: 16px;
+        }
 
         > * {
             width: 100%;
@@ -27,7 +30,6 @@ article {
             width: 100%;
             height: auto;
             background: var(--yellow-200);
-            border-radius: 16px;
 
             &.span-1 {
                 aspect-ratio: 4 / 3;
@@ -35,12 +37,16 @@ article {
         }
 
         .span-2 {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            width: 100%;
+            /*display: grid;
+            grid-template-columns: repeat(2, 1fr);*/
+            display: flex;
+            flex-direction: row;
             gap: 16px;
 
             .product-img {
                 aspect-ratio: 1 / 1;
+                width: 50%;
             }
         }
     }
@@ -50,6 +56,18 @@ article {
         padding: 16px;
         padding-bottom: 0;
         position: relative;
+
+        &-container {
+            width: 598px;
+            height: calc(100vh - 112px);
+            position: fixed;
+            overflow-y: auto;
+            top: 112px;
+            left: calc(50% + 16px);
+            display: flex;
+            flex-direction: column;
+            gap: 32px;
+        }
 
         &-header {
             button {
@@ -81,18 +99,6 @@ article {
                     }
                 }
             }
-        }
-
-        .container {
-            width: 598px;
-            height: calc(100vh - 112px);
-            position: fixed;
-            overflow-y: auto;
-            top: 112px;
-            left: calc(50% + 16px);
-            display: flex;
-            flex-direction: column;
-            gap: 32px;
         }
 
         .product-info {
@@ -183,6 +189,143 @@ article {
 
         h4 {
             margin-bottom: 16px;
+        }
+    }
+
+    @media only screen and (max-width: 766px) {
+        grid-column: 1 / span 4;
+
+        &.left-only {
+            height: calc(100vh - 64px);
+
+            .page-container {
+                display: flex;
+                flex-direction: column-reverse;
+                justify-content: start;
+                align-items: center;
+                gap: 32px;
+            }
+
+            .left {
+                height: 100%;
+                position: static;
+            }
+
+            .right {
+                height: fit-content;
+
+                ::deep .product-info {
+                    height: fit-content !important;
+
+                    section, footer {
+                        display: none;
+                    }
+                }
+            }
+        }
+
+        .page-container {
+            height: 100%;
+            //flex-direction: column-reverse;
+
+            > * {
+                width: 100%;
+            }
+        }
+
+        .left {
+            display: block;
+            width: 100%;
+            height: calc(100vh - 80px);
+            padding: 0;
+            position: fixed;
+            top: 64px;
+            overflow-y: hidden;
+
+            &-container {
+                width: calc(100% - 32px);
+                height: 100%;
+                padding: 16px;
+                padding-top: 0;
+                display: flex;
+                flex-direction: column;
+                justify-content: start;
+                gap: 16px;
+                overflow-y: auto;
+
+                .span-2 {
+                    flex-direction: column;
+
+                    .product-img {
+                        width: 100%;
+                    }
+                }
+            }
+
+            .spacer {
+                display: block;
+                width: 100%;
+                padding-bottom: 40vh;
+            }
+        }
+
+        .right {
+            width: calc(100% - 32px);
+            height: 40vh;
+            background: var(--yellow-50);
+            transition: height .3s ease-out;
+
+            &-container {
+                width: 100%;
+                height: 100%;
+                position: static;
+            }
+
+            &.fullscreen {
+                height: calc(100vh - 96px);
+                position: fixed;
+                top: 64px;
+                overflow-y: auto;
+                background: var(--yellow-50);
+                transition: height .5s ease-out;
+
+                ::deep .show-less {
+                    width: calc(100% - 32px);
+                    padding: 24px;
+                    padding-top: 40px;
+                    display: flex;
+                    justify-content: center;
+                    position: fixed;
+                    left: 0;
+                    bottom: 0;
+                    background: var(--yellow-50);
+
+                    button {
+                        padding: 6px 10px;
+                        background: none;
+                        border: 1px solid transparent;
+                        border-radius: 16px;
+                        color: var(--gray-900);
+                        text-align: center;
+                        font-family: "Fjalla One";
+                        font-size: 14px;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: 110%; /* 15.4px */
+                        animation: fadeIn .5s ease-in-out;
+                        animation-delay: .3s;
+
+                        &:hover {
+                            color: var(--purple-500);
+                        }
+
+                        &:active {
+                            color: var(--purple-700);
+                            border-color: var(--purple-700);
+                        }
+                    }
+                }
+            }
         }
     }
 }
