--- a/Sparc2/Sparc2/Catalog/Purchase/PurchaseBilling.razor.css
+++ b/Sparc2/Sparc2/Catalog/Purchase/PurchaseBilling.razor.css
@@ -5,38 +5,47 @@
   line-height: 110%;
 }
 
+p {
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
+}
+
+.loader {
+  width: fit-content;
+  font-weight: bold;
+  font-family: monospace;
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0);
+  background: linear-gradient(90deg, #d7c2f0 calc(50% + 0.5ch), #f5b393 0) right/calc(200% + 1ch) 100%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  animation: l7 2s infinite steps(11);
+}
+.loader:before {
+  content: "Sending verification code...";
+}
+
+.loader2 {
+  width: fit-content;
+  font-weight: bold;
+  font-family: monospace;
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0);
+  background: linear-gradient(90deg, #d7c2f0 calc(50% + 0.5ch), #f5b393 0) right/calc(200% + 1ch) 100%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  animation: l7 2s infinite steps(11);
+}
+.loader2:before {
+  content: "Verifying code...";
+}
+
 .form-container {
   display: flex;
   flex-direction: column;
   gap: 16px;
-}
-
-.form-group {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  gap: 16px;
-}
-.form-group.discount {
-  justify-content: flex-start;
-  align-items: flex-end;
-}
-.form-group.discount label {
-  width: 50%;
-}
-.form-group.discount button {
-  background: transparent;
-  display: flex;
-  height: 48px;
-  padding: 10px 20px;
-  justify-content: center;
-  align-items: center;
-  color: var(--purple-700);
-}
-.form-group.discount button:hover {
-  border-radius: 32px;
-  border: 1px solid var(--purple-700);
 }
 
 label {
@@ -60,5 +69,4 @@ label input {
   gap: 10px;
   border-radius: 26px;
   border: 1px solid var(--purple-100);
-  opacity: 0.5;
 }
